[package]
name = "b25-rs"
version = "0.1.0"
authors = ["kazuki0824 <kazukuro0824@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { git="https://github.com/kazuki0824/futures-rs.git" , branch="asyncio_abortable_copy"}
clap = {version = "~2.33.3", features = ["yaml"]}
ctrlc = { version = ">=3.0", features = ["termination"] }
b25-sys = { path = "../b25-sys"}