[package]
name = "b25-sys"
version = "2.0.0"
authors = ["maleicacid <maleicacid824+dev@gmail.com>"]
edition = "2021"
description = "b25-sys is more convenient Rust wrapper for libaribb25."
build = "build.rs"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/kazuki0824/recisdb-rs.git"
keywords = ["dtv", "japan", "broadcast", "b25"]

[features]
block00cbc = [ "tail_cbc", "cbc-mac", "cryptography-00" ]
block40cbc = [ "cryptography-40" ]
default = []

[dependencies]
pin-project-lite = "^0.2.9"
log = "^0.4.17"
tail_cbc = { version = "^0.1.2", optional = true }
cbc-mac = { version = "^0.1.1", optional = true }

cryptography-00 = { git = "ssh://git@github.com/kazuki0824/cryptographies-reference.git", optional = true }
cryptography-40 = { git = "ssh://git@github.com/kazuki0824/cryptographies-reference.git", optional = true }
#cryptography-00 = { path = "../../cryptographies-b25/block00", optional = true }
#cryptography-40 = { path = "../../cryptographies-b25/block40", optional = true }

[build-dependencies]
pkg-config = "0.3.25"
cmake = "0.1.45"
