[package]
name = "recisdb"
version = "1.1.0"
authors = ["maleicacid <maleicacid824+dev@gmail.com>"]
edition = "2021"
description = "recisdb can read both Unix chardev-based and BonDriver-based TV sources."
build = "build.rs"
rust-version = "1.63"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/kazuki0824/recisdb-rs.git"
keywords = ["cli", "dtv", "japan", "broadcast", "b25"]
categories = ["command-line-utilities"]

[features]
#https://gitlab.alpinelinux.org/alpine/aports/-/issues/12226
bg-static = ["bindgen/static"]
bg-runtime = ["bindgen/runtime"]
default = ["bg-runtime"]

[dependencies]
b25-sys = { path = "../b25-sys", features = [] }
chrono = "^0.4.26"
clap = { version = "^3.2", features = ["derive"] }
colored = "^2.0.0"
cpp_utils = "0.3.0"
ctrlc = { version = "^3.0", features = ["termination"] }
env_logger = "^0.10.0"
fancy-regex = "^0.11"
futures-executor = "0.3.26"
futures-time = "3.0.0"
futures-util = { version = "0.3.26", features = ["io"] }
indicatif = "0.17"
libloading = "^0.8.0"
log = "^0.4.17"
nix = "^0.27.1"
pin-project-lite = "0.2.9"

[build-dependencies]
bindgen = { version = "0.66.1", default_features = false }
cargo-deb = "1.38.1"
cc = "1.0.70"
glob = "0.3"

[package.metadata.deb]
maintainer = "Kazuki Kuroda <maleicacid824+dev@gmail.com>"
copyright = "2021-2022, Kazuki Kuroda  <maleicacid824+dev@gmail.com>"
license-file = ["LICENSE", "4"]
extended-description = """\
A simple command for ISDB-T / ISDB-S character device.
recisdb can read both Unix chardev-based and BonDriver-based TV sources. """
depends = "libpcsclite1, $auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/recisdb", "usr/bin/", "755"],
    ["../README.md", "usr/share/doc/recisdb/README", "644"]
]
