[package]
name = "recisdb"
version = "1.2.3"
authors = ["maleicacid <maleicacid824+dev@gmail.com>"]
edition = "2021"
description = "recisdb can read both Unix chardev-based and BonDriver-based TV sources."
build = "build.rs"
rust-version = "1.63"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/kazuki0824/recisdb-rs.git"
keywords = ["cli", "dtv", "japan", "broadcast", "b25"]
categories = ["command-line-utilities"]

[features]
#https://gitlab.alpinelinux.org/alpine/aports/-/issues/12226
bg-static = ["bindgen/static"]
bg-runtime = ["bindgen/runtime"]
crypto = [ "b25-sys/block00cbc", "b25-sys/block40cbc" ]
dvb = [ "dvbv5", "dvbv5-sys" ]
prioritized_card_reader = [ "b25-sys/prioritized_card_reader" ]
default = [ "bg-runtime", "prioritized_card_reader" ]

[dependencies]
b25-sys = { path = "../b25-sys" }
chrono = "^0.4.41"
clap = { version = "^4.4", features = ["derive"] }
clap-num = "1"
colored = "^3.0.0"
cpp_utils = "0.3.0"
ctrlc = { version = "^3.0", features = ["termination"] }
env_logger = "^0.11.1"
futures-executor = "0.3.26"
futures-time = "3.0.0"
futures-util = { version = "0.3.26", features = ["io"], default-features = false }
indicatif = "0.17"
log = "^0.4.17"
nom = "7.1.3"
pin-project-lite = "0.2.9"

[build-dependencies]
bindgen = { version = "0.71.1", default-features = false }
cc = { version = "1.2", features = ["parallel"] }
glob = "0.3"

[target.'cfg(windows)'.dependencies]
libloading = "^0.8.0"

[target.'cfg(unix)'.dependencies]
dvbv5 = { version = "0.2.6", optional = true }
dvbv5-sys = { version = "*", optional = true }
nix = { version = "^0.29.0", features = ["ioctl"] }

[target.'cfg(unix)'.build-dependencies]
cargo-deb = "2.0.0"

[package.metadata.deb]
maintainer = "Kazuki Kuroda <maleicacid824+dev@gmail.com>"
copyright = "2021-2022, Kazuki Kuroda  <maleicacid824+dev@gmail.com>"
license-file = ["LICENSE", "4"]
extended-description = """\
A simple command for ISDB-T / ISDB-S character device.
recisdb can read both Unix chardev-based and BonDriver-based TV sources. """
depends = "libpcsclite1, $auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/recisdb", "usr/bin/", "755"],
    ["../README.md", "usr/share/doc/recisdb/README", "644"]
]
